@@ -43,6 +43,19 @@ dupstring(const char *s)
 
 /**/
 mod_export char *
+dupstring_wlen(const char *s, unsigned len)
+{
+    char *t;
+
+    if (!s)
+	return NULL;
+    t = (char *) zhalloc(len + 1);
+    strcpy(t, s);
+    return t;
+}
+
+/**/
+mod_export char *
 ztrdup(const char *s)
 {
     char *t;
